Deploy User Activation
