# src/models/user.model.ts
@@ -1,5 +1,7 @@
 import mongoose from "mongoose";
-import {encrypt}  from "../utils/Encryption";
+import { encrypt } from "../utils/Encryption";
+import { CLIENT_HOST, EMAIL_SMTP_USER } from "../utils/env";
+import { renderMailHtml, sendMail } from "../utils/mail/mail";
 
 //export interface UserDocument extends mongoose.Document {
 export interface User {
@@ -11,6 +13,7 @@ export interface User {
   profilePicture: string;
   isActive: boolean;
   activation: string;
+  createdAt?: string;
 }
 
 // This schema defines the structure of the User document in MongoDB
@@ -55,22 +58,51 @@ const UserSchema = new mongoose.Schema<User>(
   }
 );
 
+UserSchema.post("save", async function (doc, next) {
+  try {
+    const user = doc;
+
+    console.log("Send Email to", user);
+
+    const contentMail = await renderMailHtml("registerasion-success.ejs", {
+      username: user.username,
+      fullname: user.fullname,
+      email: user.email,
+      createdAt: user.createdAt,
+      activationLink: `${CLIENT_HOST}/auth/activecode?code=${user.activation}`,
+    });
+
+    await sendMail({
+      from: EMAIL_SMTP_USER,
+      to: user.email,
+      subject: "Activation Account",
+      html: contentMail,
+    });
+  } catch (error) {
+    console.error("Email sending error:", error);
+  } finally {
+    next();
+  }
+});
+
+
 // Pre-save hook to encrypt the password before saving to the database
-UserSchema.pre("save", function (next){
-   const user = this;
-   user.password = encrypt(user.password);
-   next();
-})
+UserSchema.pre("save", function (next) {
+  const user = this;
+  user.password = encrypt(user.password);
+  user.activation = encrypt(user.id);
+  next();
+});
 
 //  hidden password field from the response
-UserSchema.methods.toJSON = function(){
+UserSchema.methods.toJSON = function () {
   const user = this;
   const userObject = user.toObject();
 
   // Remove sensitive fields from the response
   delete userObject.password;
   return userObject;
-}
+};
 
 // Create the User model using the schema
 const UserModel = mongoose.model<User>("User", UserSchema);
